# vgc-rl

./: .dockerignore  .gitignore  .gitmodules  README.md  WIKI.md  main.py  pyproject.toml  teampreview_lsa.pt  teampreview_sup_rich.pt  test_size.py
data/: items.json  moves.json
replays/: 20251227T070704014223Z_f04a4d0445.replay
scripts/: cleanup.sh  filter_moves.py  reset_pool.sh
src/: RL.py  battle_state.py  behaviour_cloning.py  cls_reducer.py  constants.py  encoder.py  env.py  eval.py  extended_battle.py  gen9vgcenv.py  heuristic.py  lookups.py  lookups_v2.py  mcts_agent.py  monte_carlo_tree.py  observation_builder.py  observing_random_player.py  parse_showdown_logs.py  policy.py  ppo_utils.py  pseudo_policy.py  random_replay_gen.py  replay_gen.py  rl_player.py  rps_state.py  sandbox.py  seed_pool.py  teampreview.py  teampreview_bench.py  teampreview_document.py  teampreview_lsa.py  teampreview_supervised.py  teampreviewhandler.py  teams.py  terminal_player.py  test.py  test_train_loop.py  train_loop.py  train_loop_single_threaded.py  train_teampreview.py  (+2 more)
src/lsa/: teampreview_bench.py  teampreview_document.py  teampreview_hybrid.py  teampreview_lsa.py  teampreview_supervised.py  teampreviewhandler.py  train_teampreview_lsa.py
teams/: dug.txt  rain.txt  sun.txt  tailroom.txt
tests/: encoding_size_test.py  monte_carlo_tree.py  pseudo_policy.py  rl_player.py  test_behaviour_cloning.py  test_bots.py  test_encoding_size.py  test_gradient_flow.py  test_policy.py  test_policy_diagnostics.py  test_rl_player.py  test_teampreview.py  test_train_loop.py
