[project]
name = "vgc-rl"
version = "0.1.0"
description = "A RL agent to play VGC in a competent manner"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "poke-env==0.11.0",
    "torch>=2.7.0",
    "numpy>=1.21.6",
    "gymnasium>=0.26.3",
    "aiohttp>=3.8.1",
    "autobahn>=22.7.1",
    "websockets>=10.3",
    "typing-extensions",
    "orjson",
    "requests",
    "urllib3",
    "idna",
    "certifi",
    "pettingzoo",
    "scikit-learn>=1.0.0",
    "transformers[torch]>=4.57.1",
    "peft>=0.18.1",
    "tensorboard>=2.20.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
