[project]
name = "p0"
version = "0.1.0"
description = "A RL agent to play VGC in a competent manner"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "poke-env==0.11.0",
    "torch>=2.7.0",
    "numpy>=1.21.6",
    "gymnasium>=0.26.3",
    "transformers[torch]>=4.57.1",
    "tensorboard>=2.20.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100
